--- a/package.json
+++ b/package.json
@@ -18,15 +18,20 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@mantine/core": "^7.4.0",
-    "@mantine/hooks": "^7.4.0",
+    "@emotion/react": "^11.11.3",
+    "@hookform/resolvers": "^3.3.4",
+    "@mantine/core": "^6.0.11",
+    "@mantine/hooks": "^6.0.11",
     "clsx": "^2.0.0",
     "lucide-react": "^0.297.0",
     "next": "^14.0.4",
+    "next-auth": "^4.24.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.3",
     "react-icons": "^4.12.0",
-    "tailwind-merge": "^2.1.0"
+    "tailwind-merge": "^2.1.0",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@commitlint/cli": "^16.3.0",
