--- a/package.json
+++ b/package.json
@@ -18,11 +18,15 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@coreui/coreui": "^4.3.2",
     "@emotion/react": "^11.11.3",
     "@hookform/resolvers": "^3.3.4",
     "@mantine/core": "^6.0.11",
     "@mantine/hooks": "^6.0.11",
+    "@types/react-icons": "^3.0.0",
+    "@types/swiper": "^6.0.0",
     "clsx": "^2.0.0",
+    "font-awesome": "^4.7.0",
     "lucide-react": "^0.297.0",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
@@ -30,6 +34,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-icons": "^4.12.0",
+    "react-quill": "^2.0.0",
+    "swiper": "^11.0.7",
     "tailwind-merge": "^2.1.0",
     "yup": "^1.3.3"
   },
