--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/react-icons": "^3.0.0",
     "@types/swiper": "^6.0.0",
     "clsx": "^2.0.0",
+    "firebase": "^10.10.0",
     "font-awesome": "^4.7.0",
     "lucide-react": "^0.297.0",
     "next": "^14.0.4",
