--- a/package.json
+++ b/package.json
@@ -21,17 +21,22 @@
     "@coreui/coreui": "^4.3.2",
     "@emotion/react": "^11.11.3",
     "@hookform/resolvers": "^3.3.4",
-    "@mantine/core": "^6.0.11",
-    "@mantine/hooks": "^6.0.11",
+    "@mantine/core": "^6.0.21",
+    "@mantine/dates": "^7.8.0",
+    "@mantine/hooks": "^6.0.21",
     "@types/react-icons": "^3.0.0",
     "@types/swiper": "^6.0.0",
+    "chart.js": "^4.4.2",
     "clsx": "^2.0.0",
+    "dayjs": "^1.11.10",
     "firebase": "^10.10.0",
     "font-awesome": "^4.7.0",
     "lucide-react": "^0.297.0",
+    "mantine-data-grid": "^0.2.3",
     "next": "^14.0.4",
     "next-auth": "^4.24.5",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-icons": "^4.12.0",
