--- a/package.json
+++ b/package.json
@@ -21,9 +21,9 @@
     "@coreui/coreui": "^4.3.2",
     "@emotion/react": "^11.11.3",
     "@hookform/resolvers": "^3.3.4",
-    "@mantine/core": "^6.0.21",
+    "@mantine/core": "^7.8.0",
     "@mantine/dates": "^7.8.0",
-    "@mantine/hooks": "^6.0.21",
+    "@types/quill": "^2.0.14",
     "@types/react-icons": "^3.0.0",
     "@types/swiper": "^6.0.0",
     "chart.js": "^4.4.2",
