--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@blocknote/core": "^0.12.4",
+    "@blocknote/react": "^0.12.4",
     "@coreui/coreui": "^4.3.2",
     "@emotion/react": "^11.11.3",
     "@hookform/resolvers": "^3.3.4",
@@ -26,6 +28,7 @@
     "@types/quill": "^2.0.14",
     "@types/react-icons": "^3.0.0",
     "@types/swiper": "^6.0.0",
+    "axios": "^1.6.8",
     "chart.js": "^4.4.2",
     "clsx": "^2.0.0",
     "dayjs": "^1.11.10",
@@ -40,7 +43,6 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-icons": "^4.12.0",
-    "react-quill": "^2.0.0",
     "swiper": "^11.0.7",
     "tailwind-merge": "^2.1.0",
     "yup": "^1.3.3"
