--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@hookform/resolvers": "^3.3.4",
     "@mantine/core": "^7.8.0",
     "@mantine/dates": "^7.8.0",
+    "@reduxjs/toolkit": "^2.2.3",
     "@types/quill": "^2.0.14",
     "@types/react-icons": "^3.0.0",
     "@types/swiper": "^6.0.0",
@@ -43,6 +44,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.49.3",
     "react-icons": "^4.12.0",
+    "react-redux": "^9.1.1",
     "swiper": "^11.0.7",
     "tailwind-merge": "^2.1.0",
     "yup": "^1.3.3"
