--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "react-redux": "^9.1.1",
     "swiper": "^11.0.7",
     "tailwind-merge": "^2.1.0",
+    "use-debounce": "^10.0.0",
     "yup": "^1.3.3"
   },
   "devDependencies": {
