--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@blocknote/react": "^0.12.4",
     "@coreui/coreui": "^4.3.2",
     "@emotion/react": "^11.11.3",
+    "@firebase/auth": "^1.7.4",
     "@hookform/resolvers": "^3.3.4",
     "@mantine/core": "^7.8.0",
     "@mantine/dates": "^7.8.0",
